# eo2lp

./: .gitignore  .gitmodules  INFO.md  README.md  cpc  dune-project  eo.bnf  eo2lp.opam  lambdapi-help.txt  notes.md  todo.md
cpc/: Prelude.lp  Prelude.lpo
cpc-less/: CompOp.eo
cpc-mini/: Cpc.eo  eq_arith.eo
cpc-mini/programs/: AciNorm.eo  Arith.eo  BitVectors.eo  Nary.eo  Utils.eo
cpc-mini/rules/: Datatypes.eo
cpc-mini/theories/: Arith.eo  Datatypes.eo  Quantifiers.eo  Sets.eo  Strings.eo
cpc-tiny/programs/: Arith.eo
cpc-tiny/rules/: Arith.eo  Builtin.eo
cpc-tiny/theories/: Arith.eo  Builtin.eo
cpc/programs/: AciNorm.lp  Arith.lp  Arith.lpo  Datatypes.lp  DistinctValues.lpo  Nary.lp  Nary.lpo  Utils.lp  Utils.lpo
cpc/rules/: Arith.lp  Arith.lpo  Arrays.lp  Arrays.lpo  Booleans.lp  Booleans.lpo  Builtin.lp  Builtin.lpo  Sets.lpo
cpc/theories/: Arith.lp  Arith.lpo  Arrays.lp  Arrays.lpo  BitVectors.lp  Builtin.lp  Builtin.lpo  Datatypes.lp  Datatypes.lpo  Ints.lp  Ints.lpo  Quantifiers.lp  Quantifiers.lpo  Reals.lp  Reals.lpo  Sets.lp  Strings.lp
eo/: Core.eo  Core.lp
ethos-tests/: const-array.eo
ijcar/: camera-ready-instructions.md  reviews-and-rebuttal.txt
lp/: Arith.lp  Core.eo.lp  Core.lp  Core.lpo  List.lp  Literal.lp  Meta.lp  Prelude.lp  Q.lp  Q.lpo  Zdiv.lp  Zdiv.lpo  out.lp  tmp.lp  tmp.lpo
lp/cpc/: Core.lp  Cpc.lp  lambdapi.pkg
lp/cpc/programs/: AciNorm.lp  Arith.lp  BitVectors.lp  Bitblasting.lp  Datatypes.lp  DistinctValues.lp  Nary.lp  PolyNorm.lp  Quantifiers.lp  Strings.lp  Utils.lp
lp/cpc/rules/: Arith.lp  ArithBvConv.lp  Arrays.lp  BitVectors.lp  Booleans.lp  Builtin.lp  Datatypes.lp  Quantifiers.lp  Rewrites.lp  Sets.lp  Strings.lp  Uf.lp
lp/cpc/theories/: Arith.lp  ArithBvConv.lp  Arrays.lp  BitVectors.lp  Builtin.lp  Datatypes.lp  Ints.lp  Quantifiers.lp  Reals.lp  Sets.lp  Strings.lp
lp/eo-test/: Core.lp  lambdapi.pkg
scripts/: bench.sh  diff-cpc.sh  gen-proofs.sh  gen-results-table.sh  setup-cpc.sh
src/: Prelude.lp  Prelude_tests.lp  Q.lp  api_lp.ml  ast.ml  context_eo.ml  desugar.ml  dune  elab_eo.ml  elaborate.ml  elaborate_eo.ml  enc_numerals.ml  encode.ml  eo2lp_cli.ml  infer.ml  interface_eo.ml  lambdapi.pkg  lexer.mll  literal.ml  lp_builders.ml  main.ml  parse_ctx.ml  parse_eo.ml  parser.mly  plan.md  pp_eo.ml  resolve.ml  syntax_eo.ml  syntax_lf.ml  syntax_lp.ml  test.eo  testing.ml  translate.ml
src/old/: context_eo.ml  desugar.ml  main.old.ml  translate.old.ml
test/: dune  test_core.ml  test_cpc.ml  test_cpc_mini_elaborate.ml  test_cpc_mini_encode.ml  test_cpc_mini_full.ml  test_cpc_mini_parse.ml  test_elaborate.ml  test_encoding.ml  test_ethos.ml  test_graph.ml  test_infra.ml  test_lp_check.ml  test_parser.ml  test_parsing.ml  test_sig_graph.ml  test_util.ml
test/cpc/: Cpc_test.lp
test/cpc/programs/: AciNorm_test.lp  Arith_test.lp  DistinctValues_test.lp  Nary_test.lp  Quantifiers_test.lp  Utils_test.lp
test/cpc/rules/: Arith_test.lp  Arrays_test.lp  Booleans_test.lp  Builtin_test.lp  Quantifiers_test.lp  Rewrites_test.lp  Sets_test.lp  Uf_test.lp
test/cpc/theories/: Arith_test.lp  Arrays_test.lp  Builtin_test.lp  Ints_test.lp  Quantifiers_test.lp  Sets_test.lp
test/jobs/: cpc-tiny.job  qf_uf.job
test/proofs/: eq_diamond1.eo
test/theories/: Prelude.lp  lambdapi.pkg
tex/: eo2lp.tex  eoas.tex  fig-pipeline.tex  inria.bib  intro.tex  jbw-boxfigure.sty  lp.tex  macros.tex  plan.md  preamble.tex  res.listing  res.tex  results-table.tex  talk.macros  talk.tex
tex/examples/: const-decl.eo  macro-defn.eo  program-decl.eo  proof-script.eo  rule-refl.eo  rule-resolution.eo
tex/listings/: arrays-row.eo  const-decls.eo  contra.eo  define-decl.eo  eq-refl.eo  mk-symm.eo  proof-and-rules.eo  proof.eo  rule-and-intro.eo  rule-cnf-implies-pos.eo  rule-modus-ponens.eo  rule-reordering.eo  rules.eo  sig-decls.eo
