(ocamllex lexer)
(menhir
 (modules parser)
)

(env
 (dev (flags (:standard -warn-error -A)))
)

(library
 (name eo2lp)
 (public_name eo2lp)
 (modules
   parser lexer
   literal parse_ctx parse_eo syntax_eo
   syntax_lp api_lp
   syntax_lf
   elaborate encode translate
   main
 )
 (flags :standard -w -8 -w -26 -w -27)
 (libraries str unix fpath)
)
