(ocamllex lexer)
(menhir
 (modules parser))

(env
 (dev (flags (:standard -warn-error -A)))
)

(library
 (name eo2lp)
 (public_name eo2lp)
 (modules
   parser lexer literal
   syntax_eo parse_eo parse_ctx
   syntax_lp api_lp
   elaborate encode main
 )
 (flags :standard -w -8 -w -26 -w -27)
 (libraries str unix fpath)
)

(executable
 (name eo2lp_cli)
 (public_name eo2lp)
 (modules eo2lp_cli)
 (libraries eo2lp)
)
